# MyEngine_OpenGL

./: CMakeLists.txt  README.md  main.cpp
include/: MyEngine.h  QuaternionTransForm.hpp  imconfig.h  shader.h
include/Model/: mesh.hpp  model.hpp
include/glad/: glad.h
include/winConfig/: winConfig.h
shader/objectShader/: object.fs  object.vs
shader/shadowShadow/: shadow.vs
shader/skyBox/: skyBox.fs  skyBox.vs
src/: MyEngine.cpp  glad.c  shader.cpp
